@@ -4,6 +4,7 @@ export(boot.mirt)
 export(calcLogLik)
 export(confmirt)
 export(confmirt.model)
+export(createItem)
 export(expand.table)
 export(extract.item)
 export(fitIndices)
