@@ -1,6 +1,6 @@
 model.elements <- function(model, factorNames, itemtype, nfactNames, nfact, J, K, fulldata, 
                            itemloc, data, N, guess, upper, itemnames, exploratory, parprior, 
-                           parnumber, BFACTOR = FALSE, D, mixedlist, debug)
+                           parnumber, BFACTOR = FALSE, D, mixedlist, debug, customItems)
 {       
     if(debug == 'model.elements') browser()
     hasProdTerms <- ifelse(nfact == nfactNames, FALSE, TRUE)    
@@ -95,7 +95,7 @@ model.elements <- function(model, factorNames, itemtype, nfactNames, nfact, J, K
                     guess=guess, upper=upper, fulldata=fulldata, J=J, K=K, 
                     nfact=nfact+length(prodlist), parprior=parprior, 
                     parnumber=parnumber, estLambdas=estlam, BFACTOR=BFACTOR, D=D, 
-                    mixedlist=mixedlist, debug=debug)      
+                    mixedlist=mixedlist, customItems=customItems, debug=debug)      
     ret[[length(ret) + 1]] <- LoadGroupPars(gmeans=gmeans, gcov=gcov, estgmeans=estgmeans, 
                                             estgcov=estgcov, parnumber=attr(ret, 'parnumber'),
                                             parprior=parprior, debug=debug)
